[package]
name = "hackgt-nfc"
version = "0.4.2"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
edition = "2018"
description = "A portable Rust library for working with HackGT's NFC badges"
readme = "README.md"
license = "MIT"
repository = "https://github.com/HackGT/hackgt-nfc"

[features]
default = ["nfc"]
nfc = ["pcsc"]

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
graphql_client = "0.8.0"
serde = "1.0.104"
serde_derive = "1.0.104"
url = "2.1.1"
regex = "1.3.4"
pcsc = { version = "2", optional = true }
